@@ -207,7 +207,7 @@ a.map_percent span		{display:inline; font-size:1.0em; line-height:1.15em; color:
 
 /*	Stats (key figures) styles
 	============================================= */
-.stats_wrap				{width:100%; margin:0 auto; padding:40px 0;}
+.stats_wrap				{width:100%; margin:0 auto; padding:40px 0; padding-top:0px;}
 span.stats_title		{display:block; font-size:1.5em; color:#000; padding-bottom:10px;}
 span.stats_title.view	{font-size:0.6em; color:#FFF;}
 span.stats_num			{display:block; font-size:8.0em; color:#000;}
