@@ -12,10 +12,10 @@
 {main_head}
 {main_max}
 {about_data_links}
+{main_stats}
 {donor_graph}
 {sector_graph}
 {main_map}
-{main_stats}
 {main_active}
 {main_ended}
 {main_data_description}
