@@ -11,6 +11,8 @@ Cleaned up feedback link
 Changed Recipient to Recipient Country
 Add disabled state for search link
 Update bottom text on search view
+Updated hover state search_intro links
+Moved stats to the top
 
 
 Development Portal (2016-11-22 shi)
